examples/shop/checkout/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkout
  labels:
    istio.io/rev: asm-managed
