examples/shop/checkout/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: checkout-virtualservice
    namespace: checkout
spec:
    hosts:
    - checkout.checkout.svc.cluster.local
    http:
    - route:
      - destination:
          host: checkout
          port:
            number: 5050
